fixed cards overflow for obscure screen sizes

--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -53,6 +53,7 @@
     color: white;
     transform: rotateY(180deg);
     padding: 30px 20px;
+    overflow: scroll;
   }
   .flip-card-back div {
       padding: 10px;
